--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "test:node": "cd api && yarn test",
     "test:smoke": "webdriver-manager update --versions.chrome 2.40 && protractor ./test/e2e/config/smoke.conf.js ",
     "test:smoke:local": "webdriver-manager update --versions.chrome 2.40 && protractor ./test/e2e/config/smoke.conf.js --local",
-    "test:functional": "yarn test:api && webdriver-manager update --versions.chrome 2.40 && protractor ./test/e2e/config/functional.conf.js",
+    "test:functional": "webdriver-manager update && protractor ./test/e2e/config/crossbrowser.conf.js",
     "test:functional:backup": "webdriver-manager update --versions.chrome 2.40 && protractor ./test/e2e/config/functional.conf.js",
     "test:functional:local": "webdriver-manager update --versions.chrome 2.40 && protractor ./test/e2e/config/functional.conf.js --local",
     "test:fullfunctional": "webdriver-manager update && protractor ./test/e2e/config/crossbrowser.conf.js",
