--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "@nicky-lenaers/ngx-scroll-to": "^1.1.1",
     "@pact-foundation/pact": "^9.2.0",
     "@pact-foundation/pact-node": "^10.9.7",
+    "@rxweb/reactive-form-validators": "^2.1.2",
     "@types/crypto-js": "^3.1.43",
     "@types/faker": "^4.1.12",
     "@types/global-agent": "^2.1.0",
@@ -98,10 +99,10 @@
     "faker": "^4.1.0",
     "file-saver": "^2.0.2",
     "form-data": "^2.5.1",
+    "git-rev-sync": "^2.0.0",
     "global-agent": "^2.1.8",
     "govuk-frontend": "3.1.0",
     "govuk_frontend_toolkit": "^8.2.0",
-    "git-rev-sync": "^2.0.0",
     "helmet": "^3.21.3",
     "isomorphic-fetch": "^3.0.0",
     "json-stringify-safe": "^5.0.1",
