--- a/package.json
+++ b/package.json
@@ -218,6 +218,7 @@
     "**/**/elliptic": "^6.5.4",
     "**/**/socket.io": "^2.4.0",
     "**/**/y18n": "^3.2.2",
-    "**/**/ssri": "8.0.1"
+    "**/**/ssri": "8.0.1",
+    "**/**/jose": "1.28.1"
   }
 }
