--- a/package.json
+++ b/package.json
@@ -99,10 +99,10 @@
     "faker": "^4.1.0",
     "file-saver": "^2.0.2",
     "form-data": "^2.5.1",
+    "git-rev-sync": "^2.0.0",
     "global-agent": "^2.1.8",
     "govuk-frontend": "3.1.0",
     "govuk_frontend_toolkit": "^8.2.0",
-    "git-rev-sync": "^2.0.0",
     "helmet": "^3.21.3",
     "isomorphic-fetch": "^3.0.0",
     "json-stringify-safe": "^5.0.1",
@@ -119,7 +119,7 @@
     "node-sass": "4.13.1",
     "otp": "^0.1.3",
     "p-iteration": "^1.1.7",
-    "redis": "^3.0.2",
+    "redis": "^3.1.2",
     "rxjs": "^6.0.0",
     "rxjs-compat": "^6.4.0",
     "session-file-store": "^1.2.0",
@@ -219,6 +219,8 @@
     "**/**/socket.io": "^2.4.0",
     "**/**/y18n": "^3.2.2",
     "**/**/ssri": "8.0.1",
-    "**/**/jose": "1.28.1"
+    "**/**/jose": "1.28.1",
+    "**/**/**/ssri": "^8.0.1",
+    "**/**/**/**/xmlhttprequest-ssl": "^1.6.2"
   }
 }
