--- a/package.json
+++ b/package.json
@@ -220,7 +220,6 @@
     "**/**/y18n": "^3.2.2",
     "**/**/ssri": "8.0.1",
     "**/**/jose": "1.28.1",
-    "**/**/**/ssri": "^8.0.1",
-    "**/**/**/**/xmlhttprequest-ssl": "^1.6.2"
+    "**/**/xmlhttprequest-ssl": "^1.6.2"
   }
 }
