--- a/package.json
+++ b/package.json
@@ -224,8 +224,6 @@
     "**/**/lodash": "^4.17.21",
     "**/**/hosted-git-info": "^3.0.8",
     "**/**/url-parse": "^1.5.0",
-    "**/**/underscore": "^1.12.1",
-    "**/**/redis": "^3.1.1",
-    "**/**/xmlhttprequest-ssl": "^1.6.2"
+    "**/**/underscore": "^1.12.1"
   }
 }
