--- a/package.json
+++ b/package.json
@@ -222,8 +222,6 @@
     "**/**/jose": "1.28.1",
     "**/**/handlebars": "^4.7.7",
     "**/**/lodash": "^4.17.21",
-    "**/**/hosted-git-info": "^3.0.8",
-    "**/**/url-parse": "^1.5.0",
-    "**/**/underscore": "^1.12.1"
+    "**/**/url-parse": "^1.5.0"
   }
 }
