--- a/package.json
+++ b/package.json
@@ -220,8 +220,6 @@
     "**/**/y18n": "^3.2.2",
     "**/**/ssri": "8.0.1",
     "**/**/jose": "1.28.1",
-    "**/**/handlebars": "^4.7.7",
-    "**/**/lodash": "^4.17.21",
-    "**/**/url-parse": "^1.5.0"
+    "**/**/handlebars": "^4.7.7"
   }
 }
