--- a/package.json
+++ b/package.json
@@ -219,6 +219,10 @@
     "**/**/socket.io": "^2.4.0",
     "**/**/y18n": "^3.2.2",
     "**/**/ssri": "8.0.1",
-    "**/**/jose": "1.28.1"
+    "**/**/jose": "1.28.1",
+    "**/**/lodash": "4.17.21",
+    "**/**/underscore": "1.12.1",
+    "**/**/hosted-git-info":"3.0.8",
+    "**/**/url-parse":"1.5.0"
   }
 }
