--- a/package.json
+++ b/package.json
@@ -100,7 +100,7 @@
     "file-saver": "^2.0.2",
     "form-data": "^2.5.1",
     "global-agent": "^2.1.8",
-    "govuk-frontend": "3.1.0",
+    "govuk-frontend": "^3.1.0",
     "govuk_frontend_toolkit": "^8.2.0",
     "git-rev-sync": "^2.0.0",
     "helmet": "^3.21.3",
