--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "@hmcts/frontend": "0.0.41-alpha",
     "@hmcts/nodejs-healthcheck": "^1.6.0",
     "@hmcts/properties-volume": "0.0.9",
-    "@hmcts/rpx-xui-common-lib": "0.2.1",
+    "@hmcts/rpx-xui-common-lib": "1.2.0",
     "@hmcts/rpx-xui-node-lib": "^2.24.3",
     "@ng-idle/core": "^8.0.0-beta.4",
     "@ng-idle/keepalive": "^8.0.0-beta.4",
@@ -100,7 +100,7 @@
     "file-saver": "^2.0.2",
     "form-data": "^2.5.1",
     "global-agent": "^2.1.8",
-    "govuk-frontend": "3.1.0",
+    "govuk-frontend": "^3.1.0",
     "govuk_frontend_toolkit": "^8.2.0",
     "git-rev-sync": "^2.0.0",
     "helmet": "^3.21.3",
