--- a/package.json
+++ b/package.json
@@ -213,12 +213,33 @@
     "@stryker-mutator/mocha-runner": "^3.0.1",
     "@stryker-mutator/typescript": "^3.0.1",
     "**/**/ini": "^1.3.6",
-    "**/**/prismjs": "^1.23.0",
+    "**/**/prismjs": "^1.24.0",
     "**/**/serialize-javascript": "^3.1.0",
     "**/**/elliptic": "^6.5.4",
     "**/**/socket.io": "^2.4.0",
     "**/**/y18n": "^3.2.2",
     "**/**/ssri": "8.0.1",
-    "**/**/jose": "1.28.1"
+    "**/**/jose": "1.28.1",
+    "**/**/handlebars": "4.7.7",
+    "**/**/tar": "6.1.9",
+    "**/**/lodash": "4.17.21",
+    "**/**/xmlhttprequest-ssl": "1.6.2",
+    "**/**/url-parse": "1.5.2",
+    "**/**/underscore": "1.31.1",
+    "**/**/glob-parent": "5.1.2",
+    "**/**/hosted-git-info": "3.0.8",
+    "**/**/trim-newlines": "4.0.1",
+    "**/**/dns-packet": "5.2.2",
+    "**/**/path-parse": "1.0.7",
+    "**/**/normalize-url": "6.0.1",
+    "**/**/ws": "7.4.6",
+    "**/**/jszip": "3.7.0",
+    "**/**/redis": "3.1.1",
+    "**/**/ng-packagr": "10.1.1",
+    "**/**/xlsx": "0.17.0"
+    
+
+    
+
   }
 }
