--- a/package.json
+++ b/package.json
@@ -225,7 +225,6 @@
     "**/**/lodash": "4.17.21",
     "**/**/xmlhttprequest-ssl": "1.6.2",
     "**/**/url-parse": "1.5.2",
-    "**/**/underscore": "1.31.1",
     "**/**/glob-parent": "5.1.2",
     "**/**/hosted-git-info": "3.0.8",
     "**/**/trim-newlines": "4.0.1",
@@ -236,7 +235,18 @@
     "**/**/jszip": "3.7.0",
     "**/**/redis": "3.1.1",
     "**/**/ng-packagr": "10.1.1",
-    "**/**/xlsx": "0.17.0"
+    "**/**/xlsx": "0.17.0",
+    "**/**/set-value": "4.0.1",
+    "**/**/ansi-regex": "5.0.1",
+    "**/**/axios": "0.21.2",
+    "**/**/passport-oauth2": "1.6.1",
+    "**/**/class-transformer": "0.3.1",
+    "**/**/nth-check": "2.0.1",
+    "**/**/color-string": "1.5.5",
+    "**/**/webpack-subresource-integrity": "1.5.1",
+    "**/**/underscore": "1.12.1"
+    
+    
     
 
     
