--- a/package.json
+++ b/package.json
@@ -82,10 +82,10 @@
     "@types/global-agent": "^2.1.0",
     "applicationinsights": "^1.5.0",
     "applicationinsights-js": "^1.0.20",
-    "axios": ">=0.21.1",
+    "axios": ">=0.21.2",
     "base-64": "^0.1.0",
     "body-parser": "^1.19.0",
-    "class-transformer": "^0.2.3",
+    "class-transformer": "^0.3.1",
     "config": "^3.2.4",
     "connect-redis": "^4.0.4",
     "cookie-parser": "^1.4.4",
@@ -119,7 +119,7 @@
     "node-sass": "4.13.1",
     "otp": "^0.1.3",
     "p-iteration": "^1.1.7",
-    "redis": "^3.0.2",
+    "redis": "3.1.1",
     "rxjs": "^6.0.0",
     "rxjs-compat": "^6.4.0",
     "session-file-store": "^1.2.0",
@@ -129,7 +129,7 @@
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10",
     "webpack-node-externals": "^1.7.2",
-    "xlsx": "^0.15.4",
+    "xlsx": "^0.17.0",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
@@ -177,7 +177,7 @@
     "karma-jasmine-html-reporter": "0.2.2",
     "mocha": "^5.2.0",
     "mochawesome": "3.1.1",
-    "ng-packagr": "^3.0.0-rc.2",
+    "ng-packagr": "^10.1.1",
     "ngrx-store-freeze": "^0.2.4",
     "nodemon": "^1.18.9",
     "pa11y": "^5.3.0",
@@ -213,12 +213,34 @@
     "@stryker-mutator/mocha-runner": "^3.0.1",
     "@stryker-mutator/typescript": "^3.0.1",
     "**/**/ini": "^1.3.6",
-    "**/**/prismjs": "^1.23.0",
+    "**/**/prismjs": "^1.25.0",
     "**/**/serialize-javascript": "^3.1.0",
     "**/**/elliptic": "^6.5.4",
     "**/**/socket.io": "^2.4.0",
     "**/**/y18n": "^3.2.2",
     "**/**/ssri": "8.0.1",
-    "**/**/jose": "1.28.1"
+    "**/**/jose": "1.28.1",
+    "**/**/hosted-git-info": "2.8.9",
+    "**/**/glob-parent": "5.1.2",
+    "**/**/tar": "4.4.18",
+    "**/**/ansi-regex": "5.0.1",
+    "**/**/set-value": "4.0.1",
+    "**/**/underscore": "1.12.1",
+    "**/**/lodash": "4.17.21",
+    "**/**/normalize-url": "4.5.1",
+    "**/**/handlebars": "4.7.7",
+    "**/**/xmlhttprequest-ssl": "1.6.2",
+    "**/**/ws": "7.4.6",
+    "**/**/path-parse": "1.0.7",
+    "**/**/url-parse": "1.5.2",
+    "**/**/jszip": "3.7.0",
+    "**/**/trim-newlines": "3.0.1",
+    "**/**/passport-oauth2": "1.6.1",
+    "**/**/dns-packet": "1.3.2",
+    "**/**/color-string": "1.5.5",
+    "**/**/nth-check": "2.0.1",
+    "**/**/webpack-subresource-integrity": "1.5.1",
+    "**/**/redis": "3.1.1"
+    
   }
 }
