--- a/package.json
+++ b/package.json
@@ -219,7 +219,6 @@
     "**/**/socket.io": "^2.4.0",
     "**/**/y18n": "^3.2.2",
     "**/**/ssri": "8.0.1",
-    "**/**/jose": "1.28.1",
-    "**/**/glob-parent": "5.1.2"
+    "**/**/jose": "1.28.1"
   }
 }
