--- a/package.json
+++ b/package.json
@@ -175,6 +175,7 @@
     "karma-coverage-istanbul-reporter": "2.0.4",
     "karma-jasmine": "1.1.2",
     "karma-jasmine-html-reporter": "0.2.2",
+    "karma-spec-reporter": "^0.0.32",
     "mocha": "^5.2.0",
     "mochawesome": "3.1.1",
     "ng-packagr": "^3.0.0-rc.2",
