Amend to fix 0% code coverage

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,11 +3,11 @@ sonar.projectName=rpx-xui-manage-organisations
 sonar.projectVersion=0.0.1
 
 sonar.sources=
-sonar.exclusions= api/**, test/**, config/**, api/**/templates/**, src/public/**, src/environments/**, **/*.html, **/*.scss, src/app/app.constants.ts, src/app/utils/app-utils.ts, /app.constants.ts,, src/app/services/appInsightsWrapper.ts
 sonar.test.inclusions=src/app/**/*.spec.ts, src/app/*.spec.ts, src/app/services/*.spec.ts
-sonar.dynamicAnalysis=reuseReports
+sonar.exclusions= api/**, test/**, config/**, api/**/templates/**, src/public/**, src/environments/**, **/*.html, **/*.scss, src/app/app.constants.ts, src/app/utils/app-utils.ts, /app.constants.ts,, src/app/services/appInsightsWrapper.ts
 
 client.sonar.ts.tslint.configPath=tslint.json
 client.sonar.ts.coverage.lcovReportPath=reports/tests/coverage/ng/lcov.info
-sonar.typescript.lcov.reportPaths=reports/tests/coverage/ng/lcov.info
+sonar.javascript.lcov.reportPaths=reports/tests/coverage/ng/lcov.info
 sonar.host.url=
+sonar.dynamicAnalysis=reuseReports
