--- a/package.json
+++ b/package.json
@@ -219,6 +219,7 @@
     "**/**/socket.io": "^2.4.0",
     "**/**/y18n": "^3.2.2",
     "**/**/ssri": "8.0.1",
-    "**/**/jose": "1.28.1"
+    "**/**/jose": "1.28.1",
+    "**/**/node-gyp": "^8.4.1"
   }
 }
