EUI-3130 PR655 WIP

--- a/package.json
+++ b/package.json
@@ -77,12 +77,14 @@
     "@nicky-lenaers/ngx-scroll-to": "^1.1.1",
     "@pact-foundation/pact": "^9.2.0",
     "@pact-foundation/pact-node": "^10.9.7",
+    "@rxweb/reactive-form-validators": "^2.1.2",
     "@types/crypto-js": "^3.1.43",
     "@types/faker": "^4.1.12",
     "@types/global-agent": "^2.1.0",
     "applicationinsights": "^1.5.0",
     "applicationinsights-js": "^1.0.20",
     "axios": ">=0.21.1",
+    "axios-mock-adapter": "^1.18.2",
     "base-64": "^0.1.0",
     "body-parser": "^1.19.0",
     "class-transformer": "^0.2.3",
@@ -99,10 +101,10 @@
     "faker": "^4.1.0",
     "file-saver": "^2.0.2",
     "form-data": "^2.5.1",
+    "git-rev-sync": "^2.0.0",
     "global-agent": "^2.1.8",
     "govuk-frontend": "^3.1.0",
     "govuk_frontend_toolkit": "^8.2.0",
-    "git-rev-sync": "^2.0.0",
     "helmet": "^3.21.3",
     "isomorphic-fetch": "^3.0.0",
     "json-stringify-safe": "^5.0.1",
@@ -135,7 +137,7 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.6.8",
     "@angular-devkit/build-ng-packagr": "~0.6.8",
-    "@angular/cli": "~7.2.4",
+    "@angular/cli": "~6.0.8",
     "@angular/compiler-cli": "^7.2.13",
     "@angular/language-service": "~7.2.0",
     "@stryker-mutator/api": "^3.0.1",
