--- a/package.json
+++ b/package.json
@@ -36,8 +36,9 @@
     "test:a11y": "webdriver-manager update --gecko=false --versions.chrome 2.40 && ng e2e --webdriver-update=false --protractorConfig=./test/accessibility/config/protractor.conf.js",
     "test:a11y1": "ng e2e --protractorConfig=./test/accessibility/config/protractor.conf.js",
     "test:ng": "ng test",
-    "lint": "yarn lint:ng",
+    "lint": "yarn lint:ng && yarn lint:node",
     "lint:ng": "ng lint",
+    "lint:node": "cd api && yarn lint",
     "e2e": "ng e2e",
     "pre-push": "ng lint rpa-pui-manager && ng build --prod && ng test rpa-pui-manager --code-coverage",
     "sonar-scan": "node_modules/sonar-scanner/bin/sonar-scanner",
@@ -77,7 +78,7 @@
     "@nicky-lenaers/ngx-scroll-to": "^1.1.1",
     "@pact-foundation/pact": "^9.2.0",
     "@pact-foundation/pact-node": "^10.9.7",
-    "@rxweb/reactive-form-validators": "^2.1.2",
+    "@rxweb/reactive-form-validators": "2.1.2",
     "@types/crypto-js": "^3.1.43",
     "@types/faker": "^4.1.12",
     "@types/global-agent": "^2.1.0",
