--- a/package.json
+++ b/package.json
@@ -64,8 +64,8 @@
     "@hmcts/ccd-case-ui-toolkit": "2.67.0-performance-tabs",
     "@hmcts/ccpay-web-component": "3.0.3",
     "@hmcts/frontend": "0.0.41-alpha",
-    "@hmcts/nodejs-healthcheck": "^1.7.0",
-    "@hmcts/properties-volume": "0.0.13",
+    "@hmcts/nodejs-healthcheck": "^1.6.0",
+    "@hmcts/properties-volume": "0.0.9",
     "@hmcts/rpx-xui-common-lib": "1.4.0",
     "@hmcts/rpx-xui-node-lib": "^2.24.3",
     "@ng-idle/core": "^8.0.0-beta.4",
@@ -104,7 +104,7 @@
     "form-data": "^2.5.1",
     "git-rev-sync": "^2.0.0",
     "global-agent": "^2.1.8",
-    "govuk-frontend": "^3.1.0",
+    "govuk-frontend": "3.1.0",
     "govuk_frontend_toolkit": "^8.2.0",
     "helmet": "^3.21.3",
     "isomorphic-fetch": "^3.0.0",
@@ -222,7 +222,6 @@
     "**/**/socket.io": "^2.4.0",
     "**/**/y18n": "^3.2.2",
     "**/**/ssri": "8.0.1",
-    "**/**/jose": "1.28.1",
-    "**/**/node-gyp": "^8.4.1"
+    "**/**/jose": "1.28.1"
   }
 }
