--- a/charts/xui-mo-webapp/values.preview.template.yaml
+++ b/charts/xui-mo-webapp/values.preview.template.yaml
@@ -17,7 +17,7 @@ nodejs:
     MANAGE_CASE_LINK: https://manage-case.aat.platform.hmcts.net/cases
     MANAGE_ORG_LINK: https://manage-org.aat.platform.hmcts.net/
 
-    APPINSIGHTS_INSTRUMENTATIONKEY: ${APPINSIGHTS_INSTRUMENTATIONKEY}
+    # APPINSIGHTS_INSTRUMENTATIONKEY: ${APPINSIGHTS_INSTRUMENTATIONKEY}
     PUI_ENV: preview
     NODE_CONFIG_ENV: prod
     FEATURE_SECURE_COOKIE_ENABLED: false
