--- a/package.json
+++ b/package.json
@@ -37,8 +37,9 @@
     "test:a11y": "webdriver-manager update --gecko=false --versions.chrome 2.40 && ng e2e --webdriver-update=false --protractorConfig=./test/accessibility/config/protractor.conf.js",
     "test:a11y1": "ng e2e --protractorConfig=./test/accessibility/config/protractor.conf.js",
     "test:ng": "ng test",
-    "lint": "yarn lint:ng",
+    "lint": "yarn lint:ng && yarn lint:node",
     "lint:ng": "ng lint",
+    "lint:node": "cd api && yarn lint",
     "e2e": "ng e2e",
     "pre-push": "ng lint rpa-pui-manager && ng build --prod && ng test rpa-pui-manager --code-coverage",
     "sonar-scan": "node_modules/sonar-scanner/bin/sonar-scanner",
@@ -64,8 +65,8 @@
     "@hmcts/ccd-case-ui-toolkit": "2.67.0-performance-tabs",
     "@hmcts/ccpay-web-component": "3.0.3",
     "@hmcts/frontend": "0.0.41-alpha",
-    "@hmcts/nodejs-healthcheck": "^1.7.0",
-    "@hmcts/properties-volume": "0.0.13",
+    "@hmcts/nodejs-healthcheck": "^1.6.0",
+    "@hmcts/properties-volume": "0.0.9",
     "@hmcts/rpx-xui-common-lib": "1.4.0",
     "@hmcts/rpx-xui-node-lib": "^2.24.3",
     "@ng-idle/core": "^8.0.0-beta.4",
@@ -78,12 +79,14 @@
     "@nicky-lenaers/ngx-scroll-to": "^1.1.1",
     "@pact-foundation/pact": "^9.2.0",
     "@pact-foundation/pact-node": "^10.9.7",
+    "@rxweb/reactive-form-validators": "2.1.2",
     "@types/crypto-js": "^3.1.43",
     "@types/faker": "^4.1.12",
     "@types/global-agent": "^2.1.0",
     "applicationinsights": "^1.5.0",
     "applicationinsights-js": "^1.0.20",
     "axios": ">=0.21.1",
+    "axios-mock-adapter": "^1.18.2",
     "base-64": "^0.1.0",
     "body-parser": "^1.19.0",
     "class-transformer": "^0.2.3",
@@ -100,10 +103,10 @@
     "faker": "^4.1.0",
     "file-saver": "^2.0.2",
     "form-data": "^2.5.1",
-    "global-agent": "^2.1.8",
-    "govuk-frontend": "^3.1.0",
-    "govuk_frontend_toolkit": "^8.2.0",
     "git-rev-sync": "^2.0.0",
+    "global-agent": "^2.1.8",
+    "govuk-frontend": "3.1.0",
+    "govuk_frontend_toolkit": "^8.2.0",
     "helmet": "^3.21.3",
     "isomorphic-fetch": "^3.0.0",
     "json-stringify-safe": "^5.0.1",
@@ -220,7 +223,6 @@
     "**/**/socket.io": "^2.4.0",
     "**/**/y18n": "^3.2.2",
     "**/**/ssri": "8.0.1",
-    "**/**/jose": "1.28.1",
-    "**/**/node-gyp": "^8.4.1"
+    "**/**/jose": "1.28.1"
   }
 }
