--- a/angular.json
+++ b/angular.json
@@ -99,7 +99,7 @@
               "**/api/**",
               "**/src/style-guide/**/*",
               "**/projects/**",
-              "**/hmcts-form-builder/**" // TODO REMOVE AND LINT
+              "**/hmcts-form-builder/**"
             ]
           }
         }
