--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
     "@ng-idle/keepalive": "^8.0.0-beta.4",
     "@ngrx/effects": "^7.4.0",
     "@ngrx/router-store": "^7.4.0",
-    "@ngrx/store": "^7.4.0",
+    "@ngrx/store": "10",
     "@ngrx/store-devtools": "^7.4.0",
     "@nguniversal/express-engine": "^7.1.0",
     "@nicky-lenaers/ngx-scroll-to": "^1.1.1",
@@ -100,10 +100,10 @@
     "faker": "^4.1.0",
     "file-saver": "^2.0.2",
     "form-data": "^2.5.1",
+    "git-rev-sync": "^2.0.0",
     "global-agent": "^2.1.8",
     "govuk-frontend": "^3.1.0",
     "govuk_frontend_toolkit": "^8.2.0",
-    "git-rev-sync": "^2.0.0",
     "helmet": "^3.21.3",
     "isomorphic-fetch": "^3.0.0",
     "json-stringify-safe": "^5.0.1",
@@ -122,7 +122,6 @@
     "p-iteration": "^1.1.7",
     "redis": "^3.0.2",
     "rxjs": "^6.0.0",
-    "rxjs-compat": "^6.4.0",
     "session-file-store": "^1.2.0",
     "smoothscroll-polyfill": "^0.4.3",
     "terser-webpack-plugin": "^2.3.5",
