--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-devkit/schematics": "^13.3.4",
     "@angular/animations": "^8.2.14",
     "@angular/cdk": "8.2.3",
     "@angular/common": "^8.2.14",
