--- a/package.json
+++ b/package.json
@@ -122,6 +122,7 @@
     "p-iteration": "^1.1.7",
     "redis": "^3.0.2",
     "rxjs": "^6.0.0",
+    "rxjs-compat": "^6.4.0",
     "session-file-store": "^1.2.0",
     "smoothscroll-polyfill": "^0.4.3",
     "terser-webpack-plugin": "^2.3.5",
