--- a/package.json
+++ b/package.json
@@ -50,18 +50,18 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-devkit/schematics": "^9.1.15",
-    "@angular/animations": "^9.1.13",
+    "@angular-devkit/schematics": "^10.2.4",
+    "@angular/animations": "^10.2.5",
     "@angular/cdk": "8.2.3",
-    "@angular/common": "^9.1.13",
-    "@angular/compiler": "^9.1.13",
-    "@angular/core": "^9.1.13",
-    "@angular/forms": "^9.1.13",
-    "@angular/localize": "9.1.13",
+    "@angular/common": "^10.2.5",
+    "@angular/compiler": "^10.2.5",
+    "@angular/core": "^10.2.5",
+    "@angular/forms": "^10.2.5",
+    "@angular/localize": "10.2.5",
     "@angular/material": "^8.2.3",
-    "@angular/platform-browser": "^9.1.13",
-    "@angular/platform-browser-dynamic": "^9.1.13",
-    "@angular/router": "^9.1.13",
+    "@angular/platform-browser": "^10.2.5",
+    "@angular/platform-browser-dynamic": "^10.2.5",
+    "@angular/router": "^10.2.5",
     "@hmcts/ccd-case-ui-toolkit": "2.67.0-performance-tabs",
     "@hmcts/ccpay-web-component": "3.0.3",
     "@hmcts/frontend": "0.0.41-alpha",
@@ -128,7 +128,7 @@
     "smoothscroll-polyfill": "^0.4.3",
     "terser-webpack-plugin": "^2.3.5",
     "ts-loader": "~6.2.1",
-    "tslib": "^1.10.0",
+    "tslib": "^2.0.0",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10",
     "webpack-node-externals": "^1.7.2",
@@ -136,11 +136,11 @@
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.901.15",
-    "@angular-devkit/build-ng-packagr": "~0.901.15",
-    "@angular/cli": "~9.1.15",
-    "@angular/compiler-cli": "^9.1.13",
-    "@angular/language-service": "~9.1.13",
+    "@angular-devkit/build-angular": "~0.1002.4",
+    "@angular-devkit/build-ng-packagr": "~0.1002.4",
+    "@angular/cli": "~10.2.4",
+    "@angular/compiler-cli": "^10.2.5",
+    "@angular/language-service": "~10.2.5",
     "@stryker-mutator/api": "^3.0.1",
     "@stryker-mutator/core": "^3.0.1",
     "@stryker-mutator/html-reporter": "^3.0.1",
@@ -168,24 +168,24 @@
     "cucumber-html-report": "0.6.5",
     "cucumber-html-reporter": "^4.0.5",
     "cucumber-pretty": "1.5.0",
-    "jasmine-core": "^2.99.1",
+    "jasmine-core": "~3.5.0",
     "jasmine-marbles": "^0.4.1",
-    "jasmine-spec-reporter": "~4.2.1",
+    "jasmine-spec-reporter": "~5.0.0",
     "jsonwebtoken": "^8.5.1",
-    "karma": "3.1.4",
-    "karma-chrome-launcher": "2.2.0",
+    "karma": "~5.0.0",
+    "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "^1.1.2",
-    "karma-coverage-istanbul-reporter": "2.0.4",
-    "karma-jasmine": "1.1.2",
-    "karma-jasmine-html-reporter": "0.2.2",
+    "karma-coverage-istanbul-reporter": "~3.0.2",
+    "karma-jasmine": "~4.0.0",
+    "karma-jasmine-html-reporter": "^1.5.0",
     "mocha": "^5.2.0",
     "mochawesome": "3.1.1",
-    "ng-packagr": "^9.0.0",
+    "ng-packagr": "^10.1.0",
     "ngrx-store-freeze": "^0.2.4",
     "nodemon": "^1.18.9",
     "pa11y": "^5.3.0",
     "pa11y-reporter-html": "^2.0.0",
-    "protractor": "~5.4.0",
+    "protractor": "~7.0.0",
     "protractor-cucumber-framework": "6.1.1",
     "protractor-multiple-cucumber-html-reporter-plugin": "1.8.0",
     "protractor-screenshot-utils": "^1.0.5",
@@ -196,8 +196,8 @@
     "sinon-express-mock": "^2.1.0",
     "sonar-scanner": "^3.1.0",
     "ts-node": "~7.0.0",
-    "tslint": "~5.11.0",
-    "typescript": "~3.8.3"
+    "tslint": "~6.1.0",
+    "typescript": "~4.0.8"
   },
   "resolutions": {
     "**/**/dot-prop": "^5.1.1",
