--- a/package.json
+++ b/package.json
@@ -50,18 +50,18 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-devkit/schematics": "^10.2.4",
-    "@angular/animations": "^10.2.5",
+    "@angular-devkit/schematics": "^11.2.19",
+    "@angular/animations": "^11.2.14",
     "@angular/cdk": "9.2.4",
-    "@angular/common": "^10.2.5",
-    "@angular/compiler": "^10.2.5",
-    "@angular/core": "^10.2.5",
-    "@angular/forms": "^10.2.5",
-    "@angular/localize": "10.2.5",
+    "@angular/common": "^11.2.14",
+    "@angular/compiler": "^11.2.14",
+    "@angular/core": "^11.2.14",
+    "@angular/forms": "^11.2.14",
+    "@angular/localize": "11.2.14",
     "@angular/material": "^8.2.3",
-    "@angular/platform-browser": "^10.2.5",
-    "@angular/platform-browser-dynamic": "^10.2.5",
-    "@angular/router": "^10.2.5",
+    "@angular/platform-browser": "^11.2.14",
+    "@angular/platform-browser-dynamic": "^11.2.14",
+    "@angular/router": "^11.2.14",
     "@hmcts/ccd-case-ui-toolkit": "2.67.0-performance-tabs",
     "@hmcts/ccpay-web-component": "3.0.3",
     "@hmcts/frontend": "0.0.41-alpha",
@@ -136,11 +136,10 @@
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1002.4",
-    "@angular-devkit/build-ng-packagr": "~0.1002.4",
-    "@angular/cli": "~10.2.4",
-    "@angular/compiler-cli": "^10.2.5",
-    "@angular/language-service": "~10.2.5",
+    "@angular-devkit/build-angular": "~0.1102.19",
+    "@angular/cli": "~11.2.19",
+    "@angular/compiler-cli": "^11.2.14",
+    "@angular/language-service": "~11.2.14",
     "@stryker-mutator/api": "^3.0.1",
     "@stryker-mutator/core": "^3.0.1",
     "@stryker-mutator/html-reporter": "^3.0.1",
@@ -153,7 +152,7 @@
     "@types/connect-redis": "^0.0.13",
     "@types/express": "^4.17.4",
     "@types/express-session": "^1.17.0",
-    "@types/jasmine": "~2.8.6",
+    "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/mocha": "^5.2.5",
     "@types/redis": "^2.8.16",
@@ -162,25 +161,25 @@
     "allure-js-commons": "^1.3.2",
     "chai": "^4.2.0",
     "chai-as-promised": "7.1.1",
-    "codelyzer": "^5.1.2",
+    "codelyzer": "^6.0.0",
     "cross-env": "^7.0.2",
     "cucumber": "5.1.0",
     "cucumber-html-report": "0.6.5",
     "cucumber-html-reporter": "^4.0.5",
     "cucumber-pretty": "1.5.0",
-    "jasmine-core": "~3.5.0",
+    "jasmine-core": "~3.6.0",
     "jasmine-marbles": "^0.4.1",
     "jasmine-spec-reporter": "~5.0.0",
     "jsonwebtoken": "^8.5.1",
-    "karma": "~5.0.0",
+    "karma": "~6.3.19",
     "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "^1.1.2",
+    "karma-coverage": "~2.0.3",
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
     "mocha": "^5.2.0",
     "mochawesome": "3.1.1",
-    "ng-packagr": "^10.1.0",
+    "ng-packagr": "^11.2.4",
     "ngrx-store-freeze": "^0.2.4",
     "nodemon": "^1.18.9",
     "pa11y": "^5.3.0",
