Updated node project to v15

--- a/package.json
+++ b/package.json
@@ -64,10 +64,10 @@
     "@hmcts/ccd-case-ui-toolkit": "2.67.0-performance-tabs",
     "@hmcts/ccpay-web-component": "3.0.3",
     "@hmcts/frontend": "0.0.41-alpha",
-    "@hmcts/nodejs-healthcheck": "^1.7.0",
+    "@hmcts/nodejs-healthcheck": "1.6.0",
     "@hmcts/properties-volume": "0.0.13",
     "@hmcts/rpx-xui-common-lib": "1.4.0",
-    "@hmcts/rpx-xui-node-lib": "^2.24.3",
+    "@hmcts/rpx-xui-node-lib": "^2.25.9",
     "@ng-idle/core": "^8.0.0-beta.4",
     "@ng-idle/keepalive": "^8.0.0-beta.4",
     "@ngrx/effects": "^7.4.0",
@@ -76,58 +76,58 @@
     "@ngrx/store-devtools": "^7.4.0",
     "@nguniversal/express-engine": "^7.1.0",
     "@nicky-lenaers/ngx-scroll-to": "^1.1.1",
-    "@pact-foundation/pact": "^9.2.0",
-    "@pact-foundation/pact-node": "^10.9.7",
+    "@pact-foundation/pact": "^9.17.3",
+    "@pact-foundation/pact-node": "^10.17.2",
     "@types/crypto-js": "^3.1.43",
     "@types/faker": "^4.1.12",
-    "@types/global-agent": "^2.1.0",
-    "applicationinsights": "^1.5.0",
+    "@types/global-agent": "^2.1.1",
+    "applicationinsights": "^1.8.10",
     "applicationinsights-js": "^1.0.20",
-    "axios": ">=0.21.1",
+    "axios": "^0.27.2",
     "base-64": "^0.1.0",
-    "body-parser": "^1.19.0",
+    "body-parser": "1.20.0",
     "class-transformer": "^0.2.3",
-    "config": "^3.2.4",
+    "config": "^3.3.7",
     "connect-redis": "^4.0.4",
-    "cookie-parser": "^1.4.4",
-    "core-js": "^2.5.4",
+    "cookie-parser": "^1.4.6",
+    "core-js": "^2.6.12",
     "crypto-js": "^3.1.9-1",
-    "dotenv-extended": "^2.7.0",
+    "dotenv-extended": "^2.9.0",
     "ejs": "^2.6.1",
     "exception-formatter": "^1.0.7",
-    "express": "^4.16.4",
-    "express-session": "^1.15.6",
+    "express": "^4.18.1",
+    "express-session": "^1.17.2",
     "faker": "^4.1.0",
-    "file-saver": "^2.0.2",
+    "file-saver": "^2.0.5",
     "form-data": "^2.5.1",
-    "global-agent": "^2.1.8",
-    "govuk-frontend": "^3.1.0",
-    "govuk_frontend_toolkit": "^8.2.0",
     "git-rev-sync": "^2.0.0",
+    "global-agent": "^2.2.0",
+    "govuk-frontend": "^3.14.0",
+    "govuk_frontend_toolkit": "^8.2.0",
     "helmet": "^3.21.3",
     "isomorphic-fetch": "^3.0.0",
     "json-stringify-safe": "^5.0.1",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^2.2.0",
-    "launchdarkly-js-client-sdk": "^2.15.2",
+    "launchdarkly-js-client-sdk": "^2.22.1",
     "log4js": "^3.0.6",
     "ngx-cookie": "4.0.2",
     "ngx-cookie-service": "^2.1.0",
-    "ngx-logger": "^4.0.3",
+    "ngx-logger": "4.0.3",
     "ngx-md": "^7.0.0",
     "ngx-pagination": "^3.2.1",
-    "node-fetch": "^2.6.1",
+    "node-fetch": "^2.6.7",
     "node-sass": "4.13.1",
     "otp": "^0.1.3",
     "p-iteration": "^1.1.7",
-    "redis": "^3.0.2",
-    "rxjs": "^6.0.0",
-    "rxjs-compat": "^6.4.0",
-    "session-file-store": "^1.2.0",
+    "redis": "^3.1.2",
+    "rxjs": "^6.6.7",
+    "rxjs-compat": "^6.6.7",
+    "session-file-store": "^1.5.0",
     "smoothscroll-polyfill": "^0.4.3",
     "terser-webpack-plugin": "^2.3.5",
     "ts-loader": "~6.2.1",
-    "webpack": "^4.41.5",
+    "webpack": "^4.46.0",
     "webpack-cli": "^3.3.10",
     "webpack-node-externals": "^1.7.2",
     "xlsx": "^0.15.4",
@@ -146,22 +146,22 @@
     "@stryker-mutator/mocha-runner": "^3.0.1",
     "@stryker-mutator/typescript": "^3.0.1",
     "@types/applicationinsights-js": "^1.0.9",
-    "@types/chai": "^4.1.7",
-    "@types/chai-as-promised": "^7.1.2",
+    "@types/chai": "^4.3.1",
+    "@types/chai-as-promised": "^7.1.5",
     "@types/connect-redis": "^0.0.13",
-    "@types/express": "^4.17.4",
+    "@types/express": "^4.17.13",
     "@types/express-session": "^1.17.0",
-    "@types/jasmine": "~2.8.6",
-    "@types/jasminewd2": "~2.0.3",
+    "@types/jasmine": "^2.8.19",
+    "@types/jasminewd2": "^2.0.10",
     "@types/mocha": "^5.2.5",
-    "@types/redis": "^2.8.16",
-    "@types/session-file-store": "^1.2.1",
-    "@types/sinon-chai": "^3.2.4",
+    "@types/redis": "^2.8.32",
+    "@types/session-file-store": "^1.2.2",
+    "@types/sinon-chai": "^3.2.8",
     "allure-js-commons": "^1.3.2",
-    "chai": "^4.2.0",
+    "chai": "^4.3.6",
     "chai-as-promised": "7.1.1",
     "codelyzer": "5.2.0",
-    "cross-env": "^7.0.2",
+    "cross-env": "^7.0.3",
     "cucumber": "5.1.0",
     "cucumber-html-report": "0.6.5",
     "cucumber-html-reporter": "^4.0.5",
@@ -181,7 +181,7 @@
     "ng-packagr": "^3.0.0-rc.2",
     "ngrx-store-freeze": "^0.2.4",
     "nodemon": "^1.18.9",
-    "pa11y": "^5.3.0",
+    "pa11y": "^5.3.1",
     "pa11y-reporter-html": "^2.0.0",
     "protractor": "~5.4.0",
     "protractor-cucumber-framework": "6.1.1",
@@ -190,12 +190,12 @@
     "rest-assured": "^0.1.0",
     "should": "13.2.3",
     "sinon": "^7.2.3",
-    "sinon-chai": "^3.3.0",
+    "sinon-chai": "^3.7.0",
     "sinon-express-mock": "^2.1.0",
     "sonar-scanner": "^3.1.0",
     "ts-node": "~7.0.0",
-    "tsickle": ">=0.25.5",
-    "tslib": "^1.7.1",
+    "tsickle": "^0.46.0",
+    "tslib": "^1.14.1",
     "tslint": "~5.11.0",
     "typescript": "~3.2.2"
   },
