--- a/package.json
+++ b/package.json
@@ -113,7 +113,7 @@
     "log4js": "^3.0.6",
     "ngx-cookie": "4.0.2",
     "ngx-cookie-service": "^2.1.0",
-    "ngx-logger": "^4.0.3",
+    "ngx-logger": "~4.2.0",
     "ngx-md": "^7.0.0",
     "ngx-pagination": "^3.2.1",
     "node-fetch": "^2.6.1",
