--- a/package.json
+++ b/package.json
@@ -61,8 +61,8 @@
     "@angular/platform-browser": "^7.2.13",
     "@angular/platform-browser-dynamic": "^7.2.13",
     "@angular/router": "^7.2.13",
+    "@hmcts/ccd-case-ui-toolkit": "2.67.0-performance-tabs",
     "@edium/fsm": "^2.1.2",
-    "@hmcts/ccd-case-ui-toolkit": "4.14.1",
     "@hmcts/ccpay-web-component": "3.0.3",
     "@hmcts/frontend": "0.0.41-alpha",
     "@hmcts/nodejs-healthcheck": "^1.7.0",
@@ -101,10 +101,10 @@
     "faker": "^4.1.0",
     "file-saver": "^2.0.2",
     "form-data": "^2.5.1",
-    "git-rev-sync": "^2.0.0",
     "global-agent": "^2.1.8",
     "govuk-frontend": "^3.1.0",
     "govuk_frontend_toolkit": "^8.2.0",
+    "git-rev-sync": "^2.0.0",
     "helmet": "^3.21.3",
     "isomorphic-fetch": "^3.0.0",
     "json-stringify-safe": "^5.0.1",
