--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "@angular/platform-browser": "^7.2.13",
     "@angular/platform-browser-dynamic": "^7.2.13",
     "@angular/router": "^7.2.13",
-    "@hmcts/ccd-case-ui-toolkit": "2.67.0-performance-tabs",
+    "@hmcts/ccd-case-ui-toolkit": "4.13.8-event-start-markdown-correct-branch-2",
     "@hmcts/ccpay-web-component": "3.0.3",
     "@hmcts/frontend": "0.0.41-alpha",
     "@hmcts/nodejs-healthcheck": "^1.7.0",
