--- a/charts/xui-mo-webapp/values.preview.template.yaml
+++ b/charts/xui-mo-webapp/values.preview.template.yaml
@@ -16,7 +16,6 @@ nodejs:
     #FEE_AND_PAY_API: https://payment-api-aat.service.core-compute-aat.internal
     MANAGE_CASE_LINK: https://manage-case.aat.platform.hmcts.net/cases
     MANAGE_ORG_LINK: https://manage-org.aat.platform.hmcts.net/
-
     APPINSIGHTS_INSTRUMENTATIONKEY: ${APPINSIGHTS_INSTRUMENTATIONKEY}
     PUI_ENV: preview
     NODE_CONFIG_ENV: prod
@@ -29,6 +28,9 @@ nodejs:
     enabled: false
 redis:
   enabled: true
+  architecture: standalone
+  auth:
+    enabled: false
 idam-pr:
   enabled: true
   redirect_uris:
