--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     "@hmcts/nodejs-healthcheck": "^1.7.0",
     "@hmcts/properties-volume": "0.0.13",
     "@hmcts/rpx-xui-common-lib": "1.7.6",
-    "@hmcts/rpx-xui-node-lib": "^2.24.3",
+    "@hmcts/rpx-xui-node-lib": "^2.25.12",
     "@ng-idle/core": "^8.0.0-beta.4",
     "@ng-idle/keepalive": "^8.0.0-beta.4",
     "@ngrx/effects": "^7.4.0",
@@ -90,7 +90,7 @@
     "config": "^3.2.4",
     "connect-redis": "^4.0.4",
     "cookie-parser": "^1.4.4",
-    "core-js": "^2.5.4",
+    "core-js": "^2.6.12",
     "crypto-js": "^3.1.9-1",
     "dotenv-extended": "^2.7.0",
     "ejs": "^2.6.1",
@@ -113,7 +113,7 @@
     "log4js": "^3.0.6",
     "ngx-cookie": "4.0.2",
     "ngx-cookie-service": "^2.1.0",
-    "ngx-logger": "^4.0.3",
+    "ngx-logger": "^4.3.3",
     "ngx-md": "^7.0.0",
     "ngx-pagination": "^3.2.1",
     "node-fetch": "^2.6.1",
@@ -121,7 +121,7 @@
     "otp": "^0.1.3",
     "p-iteration": "^1.1.7",
     "redis": "^3.0.2",
-    "rxjs": "^6.0.0",
+    "rxjs": "^6.5.3",
     "session-file-store": "^1.2.0",
     "smoothscroll-polyfill": "^0.4.3",
     "terser-webpack-plugin": "^2.3.5",
@@ -134,7 +134,6 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.803.29",
-    "@angular-devkit/build-ng-packagr": "~0.803.29",
     "@angular/cli": "~8.3.29",
     "@angular/compiler-cli": "^8.2.14",
     "@angular/language-service": "~8.2.14",
@@ -165,21 +164,21 @@
     "cucumber-html-report": "0.6.5",
     "cucumber-html-reporter": "^4.0.5",
     "cucumber-pretty": "1.5.0",
-    "jasmine-core": "^2.99.1",
+    "jasmine-core": "^3.4.0",
     "jasmine-marbles": "^0.4.1",
     "jasmine-spec-reporter": "~4.2.1",
     "jsonwebtoken": "^8.5.1",
     "karma": "3.1.4",
-    "karma-chrome-launcher": "2.2.0",
+    "karma-chrome-launcher": "3.1.1",
     "karma-coverage": "^1.1.2",
     "karma-coverage-istanbul-reporter": "2.0.4",
     "karma-jasmine": "1.1.2",
     "karma-jasmine-html-reporter": "0.2.2",
     "mocha": "^5.2.0",
     "mochawesome": "3.1.1",
-    "ng-packagr": "^3.0.0-rc.2",
+    "ng-packagr": "^5.1.0",
     "ngrx-store-freeze": "^0.2.4",
-    "nodemon": "^1.18.9",
+    "nodemon": "^2.0.2",
     "pa11y": "^5.3.0",
     "pa11y-reporter-html": "^2.0.0",
     "protractor": "~5.4.0",
