added ngx logger stuff

--- a/package.json
+++ b/package.json
@@ -62,7 +62,8 @@
     "@angular/platform-browser-dynamic": "^8.2.14",
     "@angular/router": "^8.2.14",
     "@edium/fsm": "^2.1.2",
-    "@hmcts/ccd-case-ui-toolkit": "4.17.6",
+    "@hmcts/ccpay-web-component": "5.0.4",
+    "@hmcts/ccd-case-ui-toolkit": "4.10.0-rc.6",
     "@hmcts/frontend": "0.0.41-alpha",
     "@hmcts/nodejs-healthcheck": "^1.7.0",
     "@hmcts/properties-volume": "0.0.13",
@@ -122,6 +123,7 @@
     "p-iteration": "^1.1.7",
     "redis": "^3.0.2",
     "rxjs": "^6.5.3",
+    "rxjs-compat": "^6.6.7",
     "session-file-store": "^1.2.0",
     "smoothscroll-polyfill": "^0.4.3",
     "terser-webpack-plugin": "^2.3.5",
