--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
     "@hmcts/nodejs-healthcheck": "^1.7.0",
     "@hmcts/properties-volume": "0.0.13",
     "@hmcts/rpx-xui-common-lib": "1.7.6",
-    "@hmcts/rpx-xui-node-lib": "^2.25.12",
+    "@hmcts/rpx-xui-node-lib": "2.25.4",
     "@ng-idle/core": "^8.0.0-beta.4",
     "@ng-idle/keepalive": "^8.0.0-beta.4",
     "@ngrx/effects": "^7.4.0",
@@ -132,7 +132,7 @@
     "webpack-cli": "^3.3.10",
     "webpack-node-externals": "^1.7.2",
     "xlsx": "^0.15.4",
-    "zone.js": "^0.9.1"
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.803.29",
@@ -151,12 +151,13 @@
     "@types/connect-redis": "^0.0.13",
     "@types/express": "^4.16.1",
     "@types/express-session": "^1.17.0",
-    "@types/jasmine": "~3.3.8",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/mocha": "^5.2.5",
+    "@types/jasmine": "~3.4.5",
+    "@types/jasminewd2": "~2.0.8",
+    "@types/mocha": "^8.0.3",
     "@types/redis": "^2.8.16",
     "@types/session-file-store": "^1.2.1",
     "@types/sinon-chai": "^3.2.4",
+    "@types/node": "~12.12.5",
     "allure-js-commons": "^1.3.2",
     "chai": "^4.2.0",
     "chai-as-promised": "7.1.1",
@@ -166,17 +167,16 @@
     "cucumber-html-report": "0.6.5",
     "cucumber-html-reporter": "^4.0.5",
     "cucumber-pretty": "1.5.0",
-    "jasmine-core": "^3.4.0",
     "jasmine-marbles": "^0.4.1",
+    "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
     "jsonwebtoken": "^8.5.1",
-    "karma": "3.1.4",
-    "karma-chrome-launcher": "3.1.1",
-    "karma-coverage": "^1.1.2",
-    "karma-coverage-istanbul-reporter": "2.0.4",
-    "karma-jasmine": "1.1.2",
-    "karma-jasmine-html-reporter": "0.2.2",
-    "mocha": "^5.2.0",
+    "karma": "^4.4.1",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage-istanbul-reporter": "~2.1.0",
+    "karma-jasmine": "~2.0.1",
+    "karma-jasmine-html-reporter": "^1.4.2",
+    "mocha": "^8.1.1",
     "mochawesome": "3.1.1",
     "ng-packagr": "^5.1.0",
     "ngrx-store-freeze": "^0.2.4",
@@ -193,11 +193,11 @@
     "sinon-chai": "^3.3.0",
     "sinon-express-mock": "^2.1.0",
     "sonar-scanner": "^3.1.0",
-    "ts-node": "~10.8.1",
+    "ts-node": "~8.4.1",
     "tsickle": ">=0.25.5",
     "tslib": "^1.7.1",
-    "tslint": "~5.11.0",
-    "typescript": "~3.5.0"
+    "tslint": "~5.20.0",
+    "typescript": "~3.5.3"
   },
   "resolutions": {
     "**/**/dot-prop": "^5.1.1",
