Matched package versions with MC

--- a/package.json
+++ b/package.json
@@ -64,36 +64,31 @@
     "@edium/fsm": "^2.1.2",
     "@hmcts/ccpay-web-component": "5.0.4",
     "@hmcts/ccd-case-ui-toolkit": "4.10.0-rc.6",
-    "@hmcts/frontend": "0.0.41-alpha",
+    "@hmcts/frontend": "0.0.39-alpha",
     "@hmcts/nodejs-healthcheck": "^1.7.0",
     "@hmcts/properties-volume": "0.0.13",
-    "@hmcts/rpx-xui-common-lib": "1.7.6",
-    "@hmcts/rpx-xui-node-lib": "2.25.4",
+    "@hmcts/rpx-xui-common-lib": "1.7.0",
+    "@hmcts/rpx-xui-node-lib": "2.25.12",
     "@ng-idle/core": "^8.0.0-beta.4",
     "@ng-idle/keepalive": "^8.0.0-beta.4",
     "@ngrx/effects": "^7.4.0",
     "@ngrx/router-store": "^7.4.0",
     "@ngrx/store": "^7.4.0",
     "@ngrx/store-devtools": "^7.4.0",
-    "@nguniversal/express-engine": "^7.1.0",
+    "@nguniversal/express-engine": "^7.1.1",
     "@nicky-lenaers/ngx-scroll-to": "^1.1.1",
-    "@pact-foundation/pact": "^9.2.0",
-    "@pact-foundation/pact-node": "^10.9.7",
-    "@types/crypto-js": "^3.1.43",
-    "@types/faker": "^4.1.12",
-    "@types/global-agent": "^2.1.0",
-    "applicationinsights": "^1.5.0",
+    "applicationinsights": "1.7.2",
     "applicationinsights-js": "^1.0.20",
     "axios": ">=0.21.1",
     "base-64": "^0.1.0",
     "body-parser": "^1.19.0",
-    "class-transformer": "^0.2.3",
-    "config": "^3.2.4",
+    "class-transformer": "^0.3.2",
+    "config": "^3.2.5",
     "connect-redis": "^4.0.4",
     "cookie-parser": "^1.4.4",
     "core-js": "^2.6.12",
     "crypto-js": "^3.1.9-1",
-    "dotenv-extended": "^2.7.0",
+    "dotenv-extended": "^2.7.1",
     "ejs": "^2.6.1",
     "exception-formatter": "^1.0.7",
     "express": "^4.16.4",
@@ -127,10 +122,6 @@
     "session-file-store": "^1.2.0",
     "smoothscroll-polyfill": "^0.4.3",
     "terser-webpack-plugin": "^2.3.5",
-    "ts-loader": "~6.2.1",
-    "webpack": "^4.41.5",
-    "webpack-cli": "^3.3.10",
-    "webpack-node-externals": "^1.7.2",
     "xlsx": "^0.15.4",
     "zone.js": "~0.10.2"
   },
@@ -148,16 +139,19 @@
     "@types/applicationinsights-js": "^1.0.9",
     "@types/chai": "^4.1.7",
     "@types/chai-as-promised": "^7.1.2",
+    "@types/crypto-js": "^3.1.43",
+    "@types/faker": "^4.1.12",
+    "@types/global-agent": "^2.1.0",
     "@types/connect-redis": "^0.0.13",
     "@types/express": "^4.16.1",
     "@types/express-session": "^1.17.0",
-    "@types/jasmine": "~3.4.5",
-    "@types/jasminewd2": "~2.0.8",
+    "@types/jasmine": "~3.3.8",
+    "@types/jasminewd2": "~2.0.3",
     "@types/mocha": "^8.0.3",
     "@types/redis": "^2.8.16",
     "@types/session-file-store": "^1.2.1",
     "@types/sinon-chai": "^3.2.4",
-    "@types/node": "~12.12.5",
+    "@types/node": "12.12.70",
     "allure-js-commons": "^1.3.2",
     "chai": "^4.2.0",
     "chai-as-promised": "7.1.1",
@@ -171,16 +165,19 @@
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
     "jsonwebtoken": "^8.5.1",
-    "karma": "^4.4.1",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~2.1.0",
-    "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.2",
+    "karma": "~6.0.0",
+    "karma-chrome-launcher": "3.1.1",
+    "karma-coverage-istanbul-reporter": "~2.0.1",
+    "karma-jasmine": "5.0.1",
+    "karma-jasmine-html-reporter": "^1.4.0",
+    "karma-spec-reporter": "0.0.34",
     "mocha": "^8.1.1",
-    "mochawesome": "3.1.1",
+    "mochawesome": "^6.2.1",
     "ng-packagr": "^5.1.0",
     "ngrx-store-freeze": "^0.2.4",
     "nodemon": "^2.0.2",
+    "@pact-foundation/pact": "^9.2.0",
+    "@pact-foundation/pact-node": "^10.9.7",
     "pa11y": "^5.3.0",
     "pa11y-reporter-html": "^2.0.0",
     "protractor": "~5.4.0",
@@ -193,11 +190,17 @@
     "sinon-chai": "^3.3.0",
     "sinon-express-mock": "^2.1.0",
     "sonar-scanner": "^3.1.0",
-    "ts-node": "~8.4.1",
+    "ts-node": "~10.8.1",
     "tsickle": ">=0.25.5",
     "tslib": "^1.7.1",
-    "tslint": "~5.20.0",
-    "typescript": "~3.5.3"
+    "tslint": "~5.11.0",
+    "ts-loader": "~6.2.1",
+    "typescript": "~3.5.0",
+    "webpack": "^5.73.0",
+    "webpack-cli": "^4.4.0",
+    "webpack-dev-server": "^4.9.2",
+    "webpack-node-externals": "^1.7.2",
+    "webpack-source-map-support": "^2.0.1"
   },
   "resolutions": {
     "**/**/dot-prop": "^5.1.1",
@@ -217,7 +220,7 @@
     "**/**/prismjs": "^1.23.0",
     "**/**/serialize-javascript": "^3.1.0",
     "**/**/elliptic": "^6.5.4",
-    "**/**/socket.io": "^2.4.0",
+    "**/**/socket.io": "^4.5.1",
     "**/**/y18n": "^3.2.2",
     "**/**/ssri": "8.0.1",
     "**/**/jose": "1.28.1",
