--- a/package.json
+++ b/package.json
@@ -151,7 +151,7 @@
     "@types/redis": "^2.8.16",
     "@types/session-file-store": "^1.2.1",
     "@types/sinon-chai": "^3.2.4",
-    "@types/node": "12.12.70",
+    "@types/node": "^15.6.1",
     "allure-js-commons": "^1.3.2",
     "chai": "^4.2.0",
     "chai-as-promised": "7.1.1",
