--- a/package.json
+++ b/package.json
@@ -87,17 +87,17 @@
     "connect-redis": "^2.5.1",
     "cookie-parser": "^1.4.4",
     "core-js": "^2.6.12",
-    "crypto-js": "^3.1.9-1",
+    "crypto-js": "^3.1.43",
     "dotenv-extended": "^2.7.1",
     "ejs": "^2.6.1",
     "exception-formatter": "^1.0.7",
-    "express": "^3.21.2",
-    "express-session": "^1.12.1",
-    "faker": "^4.1.0",
+    "express": "^4.17.12",
+    "express-session": "^1.17.3",
+    "faker": "^5.5.3",
     "file-saver": "^2.0.2",
     "form-data": "^2.5.1",
     "git-rev-sync": "^2.0.0",
-    "global-agent": "^2.1.8",
+    "global-agent": "^2.1.0",
     "govuk-frontend": "^3.1.0",
     "govuk_frontend_toolkit": "^8.2.0",
     "helmet": "^3.21.3",
@@ -137,23 +137,23 @@
     "@stryker-mutator/mocha-runner": "^3.0.1",
     "@stryker-mutator/typescript": "^3.0.1",
     "@types/applicationinsights-js": "^1.0.9",
-    "@types/chai": "^4.1.7",
-    "@types/chai-as-promised": "^7.1.2",
-    "@types/crypto-js": "^3.1.43",
-    "@types/faker": "^4.1.12",
+    "@types/chai": "^4.2.18",
+    "@types/chai-as-promised": "^7.1.1",
+    "@types/crypto-js": "^3.1.9-1",
+    "@types/faker": "^5.5.3",
     "@types/global-agent": "^2.1.0",
     "@types/connect-redis": "^0.0.16",
-    "@types/express": "^4.16.1",
-    "@types/express-session": "^1.17.0",
-    "@types/jasmine": "~3.3.8",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/mocha": "^8.0.3",
-    "@types/redis": "^2.8.16",
+    "@types/express": "^4.17.12",
+    "@types/express-session": "^1.17.3",
+    "@types/jasmine": "~3.7.6",
+    "@types/jasminewd2": "~2.0.9",
+    "@types/mocha": "^8.2.2",
+    "@types/redis": "^2.8.28",
     "@types/session-file-store": "^1.2.1",
-    "@types/sinon-chai": "^3.2.4",
+    "@types/sinon-chai": "^3.2.5",
     "@types/node": "^15.6.1",
     "allure-js-commons": "^1.3.2",
-    "chai": "^4.2.0",
+    "chai": "^4.2.18",
     "chai-as-promised": "7.1.1",
     "codelyzer": "5.2.0",
     "cross-env": "^7.0.2",
@@ -161,6 +161,7 @@
     "cucumber-html-report": "0.6.5",
     "cucumber-html-reporter": "^4.0.5",
     "cucumber-pretty": "1.5.0",
+    "jasmine": "^3.7.6",
     "jasmine-marbles": "^0.6.0",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
