--- a/api/package.json
+++ b/api/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "build": "NODE_ENV=production webpack --config ./webpack-node.config.js",
+    "build": "cross-env NODE_ENV=production webpack --config ./webpack-node.config.js",
     "coverage": "cross-env TS_NODE_FILES=true npx nyc mocha -r dotenv-extended/config",
     "watch": "nodemon --watch '**/*.ts' --exec ts-node -r dotenv-extended/config --files local.ts",
     "test": "cross-env TS_NODE_FILES=true mocha -r dotenv-extended/config",
