updated chart values

--- a/charts/xui-mo-webapp/values.preview.template.yaml
+++ b/charts/xui-mo-webapp/values.preview.template.yaml
@@ -22,15 +22,12 @@ nodejs:
     FEATURE_SECURE_COOKIE_ENABLED: false
     FEATURE_TERMS_AND_CONDITIONS_ENABLED: false
     FEATURE_OIDC_ENABLED: true
-    REDISCLOUD_URL: redis://${SERVICE_NAME}-redis-master:6379
+    REDISCLOUD_URL: redis://ignore:fake-password@${SERVICE_NAME}-redis-master:6379
     DEBUG: xuiNode:*,-xuiNode:auth:s2s
   autoscaling:
     enabled: false
 redis:
   enabled: true
-  architecture: standalone
-  auth:
-    enabled: false
 idam-pr:
   enabled: true
   redirect_uris:
