nodeMock port conflict fix with availability port check

--- a/package.json
+++ b/package.json
@@ -30,11 +30,12 @@
     "test:coverage:node": "cd api && yarn coverage",
     "test:mutation": "echo 'not implemented'",
     "test:mutation:fix": "NODE_ENV=development npx nyc stryker run stryker.node.conf.js ",
-    "test:ngIntegration": "ng e2e --protractorConfig=./test/ngIntegration/config/protractor.conf.js",
+    "test:ngIntegrationMockEnv": "node -e 'require(`./test/nodeMock/availablePortFinder.js`).configureTestProxyPort()'",
+    "test:ngIntegration": "yarn test:ngIntegrationMockEnv && ng e2e --protractorConfig=./test/ngIntegration/config/protractor.conf.js",
     "ng": "ng",
     "start:ng": "ng serve --port 3000 --host 0.0.0.0 --proxy-config proxy.config.json",
     "build:ng": "ng build",
-    "test:a11y": "webdriver-manager update --gecko=false --versions.chrome 2.40 && ng e2e --webdriver-update=false --protractorConfig=./test/accessibility/config/protractor.conf.js",
+    "test:a11y": "yarn test:ngIntegrationMockEnv && webdriver-manager update --gecko=false --versions.chrome 2.40 && ng e2e --webdriver-update=false --protractorConfig=./test/accessibility/config/protractor.conf.js",
     "test:a11y1": "ng e2e --protractorConfig=./test/accessibility/config/protractor.conf.js",
     "test:ng": "ng test",
     "lint": "yarn lint:ng",
@@ -184,6 +185,7 @@
     "nodemon": "^1.18.9",
     "pa11y": "^5.3.0",
     "pa11y-reporter-html": "^2.0.0",
+    "portfinder": "^1.0.28",
     "protractor": "~5.4.0",
     "protractor-cucumber-framework": "6.1.1",
     "protractor-multiple-cucumber-html-reporter-plugin": "1.8.0",
