--- a/package.json
+++ b/package.json
@@ -50,16 +50,16 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "9.1.13",
+    "@angular/animations": "10.2.5",
     "@angular/cdk": "^10.2.5",
-    "@angular/common": "^9.1.13",
-    "@angular/compiler": "^9.1.13",
-    "@angular/core": "^9.1.13",
-    "@angular/forms": "^9.1.13",
+    "@angular/common": "^10.2.5",
+    "@angular/compiler": "^10.2.5",
+    "@angular/core": "^10.2.5",
+    "@angular/forms": "^10.2.5",
     "@angular/material": "^10.2.5",
-    "@angular/platform-browser": "^9.1.13",
-    "@angular/platform-browser-dynamic": "^9.1.13",
-    "@angular/router": "^9.1.13",
+    "@angular/platform-browser": "^10.2.5",
+    "@angular/platform-browser-dynamic": "^10.2.5",
+    "@angular/router": "^10.2.5",
     "@edium/fsm": "^2.1.2",
     "@hmcts/ccd-case-ui-toolkit": "5.0.3-angular11-upgrade",
     "@hmcts/frontend": "0.0.39-alpha",
@@ -132,10 +132,10 @@
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.901.15",
-    "@angular/cli": "~9.1.15",
-    "@angular/compiler-cli": "^9.1.13",
-    "@angular/language-service": "~9.1.13",
+    "@angular-devkit/build-angular": "~0.1002.4",
+    "@angular/cli": "~10.2.4",
+    "@angular/compiler-cli": "^10.2.5",
+    "@angular/language-service": "~10.2.5",
     "@stryker-mutator/api": "^3.0.1",
     "@stryker-mutator/core": "^3.0.1",
     "@stryker-mutator/html-reporter": "^3.0.1",
@@ -163,24 +163,24 @@
     "cucumber-html-report": "0.6.5",
     "cucumber-html-reporter": "^4.0.5",
     "cucumber-pretty": "1.5.0",
-    "jasmine-core": "^2.99.1",
+    "jasmine-core": "~3.5.0",
     "jasmine-marbles": "^0.4.1",
-    "jasmine-spec-reporter": "~4.2.1",
+    "jasmine-spec-reporter": "~5.0.0",
     "jsonwebtoken": "^8.5.1",
-    "karma": "3.1.4",
-    "karma-chrome-launcher": "2.2.0",
+    "karma": "~5.0.0",
+    "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "^1.1.2",
-    "karma-coverage-istanbul-reporter": "2.0.4",
-    "karma-jasmine": "1.1.2",
-    "karma-jasmine-html-reporter": "0.2.2",
+    "karma-coverage-istanbul-reporter": "~3.0.2",
+    "karma-jasmine": "~4.0.0",
+    "karma-jasmine-html-reporter": "^1.5.0",
     "mocha": "^5.2.0",
     "mochawesome": "3.1.1",
-    "ng-packagr": "^9.0.0",
+    "ng-packagr": "^10.1.0",
     "ngrx-store-freeze": "^0.2.4",
     "nodemon": "^1.18.9",
     "pa11y": "^5.3.0",
     "pa11y-reporter-html": "^2.0.0",
-    "protractor": "~5.4.0",
+    "protractor": "~7.0.0",
     "protractor-cucumber-framework": "6.1.1",
     "protractor-multiple-cucumber-html-reporter-plugin": "1.8.0",
     "protractor-screenshot-utils": "^1.0.5",
@@ -191,8 +191,8 @@
     "sinon-express-mock": "^2.1.0",
     "sonar-scanner": "^3.1.0",
     "ts-node": "~7.0.0",
-    "tslint": "~5.11.0",
-    "typescript": "~3.8.3"
+    "tslint": "~6.1.0",
+    "typescript": "~4.0.8"
   },
   "resolutions": {
     "**/**/dot-prop": "^5.1.1",
