--- a/package.json
+++ b/package.json
@@ -50,19 +50,22 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-material-components/datetime-picker": "6.0.0",
+    "@angular-material-components/moment-adapter": "6.0.0",
     "@angular/animations": "^11.2.14",
     "@angular/cdk": "^11.2.13",
     "@angular/common": "^11.2.14",
     "@angular/compiler": "^11.2.14",
     "@angular/core": "^11.2.14",
     "@angular/forms": "^11.2.14",
-    "@angular/material": "11.2.13",
+    "@angular/material": "^11.2.13",
     "@angular/platform-browser": "^11.2.14",
     "@angular/platform-browser-dynamic": "^11.2.14",
     "@angular/router": "^11.2.14",
     "@edium/fsm": "^2.1.2",
-    "@hmcts/ccd-case-ui-toolkit": "5.0.3-angular11-upgrade",
-    "@hmcts/frontend": "0.0.39-alpha",
+    "@hmcts/ccd-case-ui-toolkit": "5.0.13-angular11-upgrade",
+    "@hmcts/ccpay-web-component": "5.0.4",
+    "@hmcts/frontend": "0.0.50-alpha",
     "@hmcts/nodejs-healthcheck": "^1.7.0",
     "@hmcts/properties-volume": "0.0.13",
     "@hmcts/rpx-xui-common-lib": "2.1.0-angular-upgrade-11",
@@ -100,8 +103,8 @@
     "form-data": "^2.5.1",
     "git-rev-sync": "^2.0.0",
     "global-agent": "^2.1.8",
-    "govuk-frontend": "^3.1.0",
-    "govuk_frontend_toolkit": "^8.2.0",
+    "govuk-frontend": "^4.3.1",
+    "govuk_frontend_toolkit": "^9.0.0",
     "helmet": "^3.21.3",
     "isomorphic-fetch": "^3.0.0",
     "json-stringify-safe": "^5.0.1",
@@ -115,26 +118,21 @@
     "ngx-md": "^12.0.0",
     "ngx-pagination": "^3.2.1",
     "node-fetch": "^2.6.1",
-    "node-sass": "4.13.1",
     "otp": "^0.1.3",
     "p-iteration": "^1.1.7",
     "redis": "^3.0.2",
+    "rx-polling": "^1.1.0",
     "rxjs": "^6.0.0",
     "rxjs-compat": "^6.4.0",
     "session-file-store": "^1.2.0",
     "smoothscroll-polyfill": "^0.4.3",
-    "terser-webpack-plugin": "^2.3.5",
-    "ts-loader": "~6.2.1",
-    "webpack": "^4.41.5",
-    "webpack-cli": "^3.3.10",
-    "webpack-node-externals": "^1.7.2",
     "xlsx": "^0.15.4",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1002.4",
-    "@angular/cli": "~11.2.4",
-    "@angular/compiler-cli": "^11.2.5",
+    "@angular-devkit/build-angular": "~0.1102.19",
+    "@angular/cli": "^11.2.19",
+    "@angular/compiler-cli": "~11.2.14",
     "@angular/language-service": "~11.2.5",
     "@stryker-mutator/api": "^3.0.1",
     "@stryker-mutator/core": "^3.0.1",
@@ -145,12 +143,12 @@
     "@types/applicationinsights-js": "^1.0.9",
     "@types/chai": "^4.1.7",
     "@types/chai-as-promised": "^7.1.2",
-    "@types/connect-redis": "^0.0.13",
     "@types/express": "^4.17.4",
     "@types/express-session": "^1.17.0",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
     "@types/mocha": "^5.2.5",
+    "@types/node": "^14.14.45",
     "@types/redis": "^2.8.16",
     "@types/session-file-store": "^1.2.1",
     "@types/sinon-chai": "^3.2.4",
@@ -163,17 +161,17 @@
     "cucumber-html-report": "0.6.5",
     "cucumber-html-reporter": "^4.0.5",
     "cucumber-pretty": "1.5.0",
-    "jasmine-core": "~3.5.0",
+    "jasmine-core": "~3.6.0",
     "jasmine-marbles": "^0.4.1",
     "jasmine-spec-reporter": "~5.0.0",
     "jsonwebtoken": "^8.5.1",
-    "karma": "~5.0.0",
+    "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "^1.1.2",
-    "karma-coverage-istanbul-reporter": "~3.0.2",
+    "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
-    "mocha": "^5.2.0",
+    "karma-spec-reporter": "0.0.34",
+    "mocha": "^8.1.1",
     "mochawesome": "3.1.1",
     "ng-packagr": "^10.1.0",
     "ngrx-store-freeze": "^0.2.4",
@@ -190,9 +188,17 @@
     "sinon-chai": "^3.3.0",
     "sinon-express-mock": "^2.1.0",
     "sonar-scanner": "^3.1.0",
-    "ts-node": "~7.0.0",
+    "source-map-explorer": "^1.5.0",
+    "terser-webpack-plugin": "^5.3.3",
+    "ts-loader": "^6.2.1",
+    "ts-node": "~10.8.1",
+    "tslib": "^2.1.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.0.8"
+    "typescript": "~4.0.8",
+    "webpack": "^5.73.0",
+    "webpack-cli": "^4.4.0",
+    "webpack-dev-server": "^4.9.2",
+    "webpack-node-externals": "^1.7.2"
   },
   "resolutions": {
     "**/**/dot-prop": "^5.1.1",
@@ -212,7 +218,7 @@
     "**/**/prismjs": "^1.23.0",
     "**/**/serialize-javascript": "^3.1.0",
     "**/**/elliptic": "^6.5.4",
-    "**/**/socket.io": "^2.4.0",
+    "**/**/socket.io": "^4.5.0",
     "**/**/y18n": "^3.2.2",
     "**/**/ssri": "8.0.1",
     "**/**/jose": "1.28.1",
