Fix lint warnings

--- a/package.json
+++ b/package.json
@@ -38,8 +38,9 @@
     "test:a11y": "yarn test:ngIntegrationMockEnv && webdriver-manager update --gecko=false --versions.chrome 2.40 && ng e2e --webdriver-update=false --protractorConfig=./test/accessibility/config/protractor.conf.js",
     "test:a11y1": "ng e2e --protractorConfig=./test/accessibility/config/protractor.conf.js",
     "test:ng": "ng test",
-    "lint": "yarn lint:ng",
+    "lint": "yarn lint:ng && yarn lint:node",
     "lint:ng": "ng lint",
+    "lint:node": "cd api && yarn lint",
     "e2e": "ng e2e",
     "pre-push": "ng lint rpa-pui-manager && ng build --prod && ng test rpa-pui-manager --code-coverage",
     "sonar-scan": "node_modules/sonar-scanner/bin/sonar-scanner",
