EUI-6548: Construct Elasticsearch API request body dynamically (#909)
* EUI-6548: Construct Elasticsearch API request body dynamically

Refactor multiple variants of the request body sent when querying the Elasticsearch API, to a single version that is constructed dynamically from the request query parameters passed.

* Fix lint warnings

* Disable running lint on api by default

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "test:ng": "ng test",
     "lint": "yarn lint:ng",
     "lint:ng": "ng lint",
+    "lint:node": "cd api && yarn lint",
     "e2e": "ng e2e",
     "pre-push": "ng lint rpa-pui-manager && ng build --prod && ng test rpa-pui-manager --code-coverage",
     "sonar-scan": "node_modules/sonar-scanner/bin/sonar-scanner",
