casetypes added to yaml file

--- a/charts/xui-mo-webapp/values.preview.template.yaml
+++ b/charts/xui-mo-webapp/values.preview.template.yaml
@@ -24,6 +24,7 @@ nodejs:
     FEATURE_OIDC_ENABLED: true
     REDISCLOUD_URL: redis://ignore:fake-password@${SERVICE_NAME}-redis-master:6379
     DEBUG: xuiNode:*,-xuiNode:auth:s2s
+    CASE_TYPES: CIVIL,MoneyClaimCase,DIVORCE,FinancialRemedyContested,FinancialRemedyMVP2,Asylum,Caveat,GrantOfRepresentation,StandingSearch,WillLodgement,CARE_SUPERVISION_EPO,Benefit,NFD
   autoscaling:
     enabled: false
 redis:
