EUI-7931 Yarn V3 upgrade

--- a/.gitignore
+++ b/.gitignore
@@ -63,4 +63,13 @@ report.json
 
 # Stryker - mutation tests
 .stryker-tmp/
-stryker.log 
+stryker.log
+
+# Yarn
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
