Add all secrets except redis access key to preview

--- a/charts/xui-mo-webapp/values.preview.template.yaml
+++ b/charts/xui-mo-webapp/values.preview.template.yaml
@@ -29,6 +29,8 @@ nodejs:
       secrets:
         - mo-s2s-client-secret
         - xui-oauth2-token
+        - appinsights-instrumentationkey-mo
+        - google-analytics-key
         - launch-darkly-client-id
   autoscaling:
     enabled: false
