--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   },
   "scripts": {
     "build": "yarn build:prod && yarn build:node",
-    "build:prod": "npx ng build --prod",
+    "build:prod": "ng build --configuration production",
+    "clean": "rm -f -r node_modules && rm -f yarn.lock",
     "build:ng": "ng build",
     "build:node": "cd api && yarn build",
     "e2e": "ng e2e",
@@ -71,7 +72,7 @@
     "@hmcts/frontend": "0.0.50-alpha",
     "@hmcts/nodejs-healthcheck": "1.7.0",
     "@hmcts/properties-volume": "0.0.13",
-    "@hmcts/rpx-xui-common-lib": "1.8.7-fee-paid-filter-change",
+    "@hmcts/rpx-xui-common-lib": "2.0.0-NodeAndNgUpgrades-03",
     "@hmcts/rpx-xui-node-lib": "2.25.12",
     "@ng-idle/core": "^10.0.0",
     "@ng-idle/keepalive": "^10.0.0",
