--- a/package.json
+++ b/package.json
@@ -66,10 +66,12 @@
     "@angular/platform-browser": "^15.2.9",
     "@angular/platform-browser-dynamic": "^15.2.9",
     "@angular/router": "^15.2.9",
+    "@circlon/angular-tree-component": "^11.0.4",
     "@edium/fsm": "^2.1.2",
-    "@hmcts/ccd-case-ui-toolkit": "5.0.14-angular11-upgrade",
+    "@hmcts/ccd-case-ui-toolkit": "link:../ccd-case-ui-toolkit/dist/ccd-case-ui-toolkit",
     "@hmcts/ccpay-web-component": "link:../ccpay-web-component/dist/payment-lib",
     "@hmcts/frontend": "0.0.50-alpha",
+    "@hmcts/media-viewer": "link:../em-media-viewer/dist/media-viewer",
     "@hmcts/nodejs-healthcheck": "1.7.0",
     "@hmcts/properties-volume": "0.0.13",
     "@hmcts/rpx-xui-common-lib": "2.0.0-NodeAndNgUpgrades-03",
@@ -84,6 +86,7 @@
     "@pact-foundation/pact": "^9.2.0",
     "@pact-foundation/pact-node": "^10.9.7",
     "@rxweb/reactive-form-validators": "2.1.2",
+    "@swimlane/ngx-datatable": "^20.0.0",
     "@types/crypto-js": "^3.1.43",
     "@types/faker": "^4.1.12",
     "@types/global-agent": "^2.1.0",
@@ -111,6 +114,7 @@
     "global-agent": "^2.1.8",
     "govuk-frontend": "3.14.0",
     "govuk_frontend_toolkit": "^9.0.0",
+    "hammerjs": "^2.0.8",
     "helmet": "^3.21.3",
     "isomorphic-fetch": "^3.0.0",
     "json-stringify-safe": "^5.0.1",
@@ -118,6 +122,9 @@
     "jwt-decode": "^2.2.0",
     "launchdarkly-js-client-sdk": "^2.15.2",
     "log4js": "^3.0.6",
+    "moment-timezone": "^0.5.28",
+    "mutable-div": "^1.0.0",
+    "ngx-chips": "2.1.0",
     "ngx-cookie": "4.0.2",
     "ngx-cookie-service": "^2.1.0",
     "ngx-logger": "^4.0.3",
@@ -126,6 +133,8 @@
     "node-fetch": "^2.6.1",
     "otp": "^0.1.3",
     "p-iteration": "^1.1.7",
+    "pdfjs-dist": "2.5.207",
+    "pegjs": "^0.10.0",
     "redis": "^3.0.2",
     "rpx-xui-translation": "0.1.6",
     "rx-polling": "^1.1.0",
