use upgraded libs

--- a/package.json
+++ b/package.json
@@ -68,8 +68,8 @@
     "@angular/router": "^15.2.9",
     "@circlon/angular-tree-component": "^11.0.4",
     "@edium/fsm": "^2.1.2",
-    "@hmcts/ccd-case-ui-toolkit": "link:./temp-dist/ccd-case-ui-toolkit",
-    "@hmcts/ccpay-web-component": "link:./temp-dist/payment-lib",
+    "@hmcts/ccd-case-ui-toolkit": "7.0.0-NodeAndNgUpgrades.1",
+    "@hmcts/ccpay-web-component": "6.0.0-beta01",
     "@hmcts/frontend": "0.0.50-alpha",
     "@hmcts/media-viewer": "2.10.0",
     "@hmcts/nodejs-healthcheck": "1.7.0",
@@ -136,7 +136,7 @@
     "pdfjs-dist": "2.5.207",
     "pegjs": "^0.10.0",
     "redis": "^3.0.2",
-    "rpx-xui-translation": "0.1.6",
+    "rpx-xui-translation": "1.0.0-NodeAndNgUpgrades-02",
     "rx-polling": "^1.1.0",
     "rxjs": "^7.8.1",
     "rxjs-compat": "^6.4.0",
